# OTTO

./: .env.example  .gitignore  .mcp.json  ADVANCEMENT_ROADMAP.md  BLUEPRINT.md  CHANGELOG.md  CITATIONS.md  CLAUDE.md  CONSOLIDATION_INVENTORY.md  CONTRIBUTING.md  GUIDING_PRINCIPLES.md  OTTO-HARDENING-BLUEPRINT.md  OTTO_COMPREHENSIVE_INDEX.md  OTTO_MEMORY_AUDIT.md  PHILOSOPHY.md  README.md  STRATEGY.md  THINKINGMACHINES_COMPLIANCE.md  install.sh  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  start-dashboard.bat
OTTO_Agents/: .env.example  pyproject.toml  requirements.txt
OTTO_Agents/otto_agents/: __init__.py  builder.py  config.py  consistency.py  main.py  nexus.py
OTTO_Agents/otto_agents/hooks/: __init__.py  constitutional.py
OTTO_Agents/otto_agents/tools/: __init__.py  commitment_tools.py
OTTO_Agents/tests/: conftest.py  test_commitment_tools.py  test_constitutional_hooks.py
otto_v4/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
otto_v4/.github/workflows/: test.yml
otto_v4/docs/plans/: 2026-02-11-score-push.md
otto_v4/otto_agent/: CLAUDE.md  __init__.py  otto_agent.py  otto_hooks.py  otto_tools.py
otto_v4/otto_agent/tests/: test_agent.py  test_hooks.py  test_tools.py
otto_v4/src/otto/: __init__.py  __main__.py  cli.py  constitutional.py  crypto.py  db.py  detector.py  learner.py  log.py  model_config.py  models.py  nudge.py  plasticity.py  response_gen.py  router.py  scheduler.py  sender.py  signals.py  simulate.py  state.py  store.py  trails.py  tui.py  watcher.py
otto_v4/src/otto/modes/: __init__.py  acknowledger.py  base.py  decomposer.py  executor.py  guide.py  (+3 more)
otto_v4/tests/: conftest.py  test_cli.py  test_constitutional.py  test_crypto.py  test_db.py  test_detector.py  test_determinism.py  test_history_analyzer.py  test_integration_routing.py  test_learner.py  test_metrics.py  test_mode_consolidation.py  test_model_config.py  test_models.py  test_nudge.py  test_plasticity.py  test_response_gen.py  test_router.py  test_scheduler.py  test_sender.py  test_signals.py  test_simulate.py  test_state.py  test_store.py  test_trail_routing.py  test_trails.py  test_transport.py  test_tui.py  test_watcher.py  test_watcher_security.py  test_whatsapp_transport.py  test_wiring.py
otto_v4/tests/test_modes/: test_acknowledger.py  test_base.py  test_decomposer.py  test_executor.py  test_guide.py  test_protector.py  test_redirector.py  test_restorer.py
(+667 files in other folders)
