[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "otto-agents"
version = "0.1.0"
description = "OTTO cognitive agents — NEXUS orchestrator, He2025 consistency, phase builder"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk>=0.1.35",
    "otto @ file:///${PROJECT_ROOT}/../otto_v4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
otto-agents = "otto_agents.main:cli"

[tool.setuptools.packages.find]
include = ["otto_agents*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
