[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "otto"
version = "5.0.0b1"
description = "Cognitive commitment engine — manage the noise without falling into it."
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0,<1.0",
    "click>=8.0,<9.0",
    "fastapi>=0.100.0,<1.0",
    "httpx>=0.27,<1.0",
    "pydantic>=2.0.0,<3.0",
    "uvicorn>=0.20.0,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "pytest-cov>=5.0,<6.0",
]
tui = [
    "textual>=0.80,<1.0",
]

[project.scripts]
otto = "otto.cli:main"
otto-agent = "otto_agent.otto_agent:main"

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["otto*", "otto_agent*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: tests that hit real Claude API (deselect with '-m not integration')",
]
